# sqlite

./: .gitmodules  README.md
include/elelel/sqlite/: sqlite
include/elelel/sqlite/type_policy/: c_array  native  primitive  stl
src/: database.hpp  input_iterator.hpp  iquery.hpp  macro.h  oquery.hpp  parameter_adapter.hpp  parameter_iterator.hpp  parameters_container.hpp  query.hpp  read_rows_container.hpp  read_rows_iterator.hpp  result.hpp  row.hpp  statement.hpp  type_policy.hpp
src/definition/: database.hpp  error_category.hpp  error_condition.hpp  iquery.hpp  parameter_adapter.hpp  parameter_iterator.hpp  parameters_container.hpp  query.hpp  read_rows_container.hpp  read_rows_iterator.hpp  result.hpp
src/type_policy/: c_arrays.hpp  native.hpp  primitive_c.hpp  stl.hpp
test/: CMakeLists.txt
test/src/: sqlite_test.cpp  tp_native_test.cpp
